<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Team A-->
        <LinearLayout style="@style/TeamLayout">

            <TextView
                style="@style/TeamLabelStyle"
                android:text="@string/labelTeamA" />

            <TextView
                android:id="@+id/score_team_A"
                style="@style/TeamScoreLabel"
                android:text="@string/defaultScore" />

            <Button
                android:id="@+id/three_points_A"
                style="@style/TeamButtonStyle"
                android:onClick="threePointsTeamA"
                android:text="@string/threePoints"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/two_points_A"
                style="@style/TeamButtonStyle"
                android:layout_marginVertical="8dp"
                android:onClick="twoPointsTeamA"
                android:text="@string/twoPoints"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/free_throw_A"
                style="@style/TeamButtonStyle"
                android:onClick="freeThrowTeamA"
                android:text="@string/freeThrow"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <!--Divider-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/colorDivider" />

        <!--Team B-->
        <LinearLayout style="@style/TeamLayout">

            <TextView
                style="@style/TeamLabelStyle"
                android:text="@string/labelTeamB" />

            <TextView
                android:id="@+id/score_team_B"
                style="@style/TeamScoreLabel"
                android:text="@string/defaultScore" />

            <Button
                android:id="@+id/three_points_B"
                style="@style/TeamButtonStyle"
                android:onClick="threePointsTeamB"
                android:text="@string/threePoints"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/two_points_B"
                style="@style/TeamButtonStyle"
                android:layout_marginVertical="8dp"
                android:onClick="twoPointsTeamB"
                android:text="@string/twoPoints"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/free_throw_B"
                style="@style/TeamButtonStyle"
                android:onClick="freeThrowTeamB"
                android:text="@string/freeThrow"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_score"
        style="@style/BasicView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/reset"
        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>